Realign header, correct margins

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,10 @@ body {
     font-family: sans-serif
 }
 
+main {
+    margin: 20px;
+}
+
 h2 {
     padding-top: 50px;
     padding-bottom: 20px;
@@ -20,13 +24,20 @@ h2 {
 
 
 header {
-    padding: 20px;
+    margin: 20px;
     font-family: sans-serif;
     background-color: #acc8d7;
     color: ;
 }
 
+
+#about-me img {
+    max-height: 200px;
+    float: right;
+}
+
 .name{
+    padding: 20px;
     display: inline-block;
     font-size: 50px;
 }
@@ -66,10 +77,12 @@ header {
 
 nav {
     padding-top: 20px;
-    margin-right: 30px;
-    float: right;
+    padding-right: 30px;
+    padding-bottom: 20px;
+    text-align: right;
     font-family: sans-serif;
     font-size: 20px;
+    background-color: aliceblue;
 }
 
 
@@ -82,6 +95,13 @@ nav ul li {
     margin-left: 25px;
 
 }
+
+/* element selector to format element a (hyperlinks) */
+a {
+    color: black;
+    text-decoration: none;
+}
+
 
 #contact-info {
     padding-top: 20px;
